# python-project-50

./: README.md  pyproject.toml
hexlet_code/gendiff/scripts/: gendiff.py
