[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["spoddub <spodd98@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
gendiff = "hexlet_code.gendiff.scripts.gendiff:main"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
